--- a/webpages/index.html
+++ b/webpages/index.html
@@ -2,10 +2,84 @@
 <meta charset="utf-8">
 <title>Home</title>
 
-<link rel="stylesheet" href="style/index.css">
+<link rel="stylesheet" href="./contents/style/index.css">
 <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script>
-<script type="module" defer src="static/index.js"></script>
+<script type="module" defer src="./contents/static/index.js"></script>
 
 <body>
+    <div class="img-border"></div>
+    <div class="img-wrapper">
+        <img alt="profile picture" src="./contents/imgs/topbar-photo.jpeg" class="profile-img">
+    </div>    
+    <div class="top-bar">
+        <ul>
+            <li>
+                <a href="#">HOME</a>
+            </li>
+            <li>
+                <a href="#skills">WHAT I CAN</a>
+            </li>
+            <li>
+                <a href="#projects">PROJECTS</a>
+            </li>
+            <li>
 
+                <a href="#social">SOCIAL</a>
+            </li>
+            <li>
+                <a href="#contact">CONTACT ME</a>
+            </li>
+        </ul>
+    </div>
+    <div class="social-bar">
+        <ul>
+            <li>
+                <a href="https://github.com/OguzGurv2"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/oguz-gur/"><i class="fa-brands fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href=""><i class="fa-solid fa-envelope"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/ouzdotexe/"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <div></div>
+            </li>
+        </ul>
+    </div>
+    <section class="hero-section">
+        <div class="hero-wrapper">
+            <div class="hero-content">
+                <div class="spans">
+                    <span>O</span>
+                    <span>G</span>
+                    <span>U</span>
+                    <span>Z</span>
+                    <br>
+                    <span>G</span>
+                    <span>U</span>
+                    <span>R</span>
+                </div>
+                <p>SECOND YEAR SOFTWARE ENGINEERING STUDENT</p>
+            </div>
+            <div class="hero-img">
+                <div class="img-clip"></div>
+                <img src="./contents/imgs/AdobeStock_253417100.jpeg">
+                <div class="dark-overlay"></div>
+            </div>
+        </div>
+    </section>
+    <section id="skills" class="skills-section">
+        <div class="skills-content">
+            <ul>
+                <li>
+                    <i></i>
+                    <p></p>
+                </li>
+            </ul>
+        </div>
+    </section>
 </body>
