--- a/webpages/index.html
+++ b/webpages/index.html
@@ -20,11 +20,11 @@
                 <a href="#skills">WHAT I CAN</a>
             </li>
             <li>
-                <a href="#projects">PROJECTS</a>
+                <a href="#links">LINKS</a>
             </li>
             <li>
 
-                <a href="#social">SOCIAL</a>
+                <a href="#portfolio">PORTFOLIO</a>
             </li>
             <li>
                 <a href="#contact">CONTACT ME</a>
@@ -40,7 +40,7 @@
                 <a href="https://www.linkedin.com/in/oguz-gur/"><i class="fa-brands fa-linkedin"></i></a>
             </li>
             <li>
-                <a href=""><i class="fa-solid fa-envelope"></i></a>
+                <a href="mailto:oguz.gur.cs@gmail.com"><i class="fa-solid fa-envelope"></i></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/ouzdotexe/"><i class="fa-brands fa-instagram"></i></a>
@@ -72,14 +72,85 @@
             </div>
         </div>
     </section>
-    <section id="skills" class="skills-section">
+    <section id="skills">
+        <h1 class="skills-header">My Key Competences</h1>
         <div class="skills-content">
             <ul>
                 <li>
-                    <i></i>
-                    <p></p>
+                    <div class="icon-container">
+                        <i class="fa-brands fa-js"></i>
+                    </div>
+                    <p>JavaScript</p>
+                </li>
+                <li>
+                    <div class="icon-container">
+                        <i class="fa-solid fa-database"></i>
+                    </div>
+                    <p>SQL<br>Languages</p>
+                </li>
+                <li>
+                    <div class="icon-container">
+                        <i class="fa-brands fa-html5"></i>
+                    </div>
+                    <p>HTML5</p>
+                </li>
+                <li>
+                    <div class="icon-container">
+                        <i class="fa-brands fa-css3-alt"></i>
+                    </div> 
+                    <p>CSS3</p>
+                </li>
+                <li>
+                    <div class="icon-container">
+                        <i class="fa-brands fa-php"></i>
+                    </div> 
+                    <p>PHP</p>
+                </li>
+                <li>
+                    <div class="icon-container">
+                        <i class="fa-solid fa-code"></i>
+                    </div> 
+                    <p>Haskell</p>
                 </li>
             </ul>
         </div>
+        <div class="circle-background-1"></div>
+        <div class="circle-background-2"></div>
+        <div class="circle-background-3"></div>
+    </section>
+    <div id="links">
+        <h1>Links</h1>
+        <ul class="link-list">
+            <li>
+                <div>
+                    <a href="https://github.com/OguzGurv2"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <p>Github</p>
+            </li>
+            <li>
+                <div>
+                    <a href="https://www.linkedin.com/in/oguz-gur/"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <p>Linkedin</p>
+            </li>
+            <li>
+                <div>
+                    <a href="mailto:oguz.gur.cs@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                </div>
+                <p>Gmail</p>
+            </li>
+            <li>
+                <div>
+                    <a href="https://www.instagram.com/ouzdotexe/"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+                <p>Instagram</p>
+            </li>
+        </ul>
+        <div class="circle-background-1"></div>
+        <div class="circle-background-2"></div>
+        <div class="circle-background-3"></div>
+    </div>
+    <section id="portfolio">
+
     </section>
 </body>
