second portfolio div added

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -183,7 +183,8 @@
   </div>
   <section id="portfolio">
     <h1>Portfolio</h1>
-    <h2>Contributions</h2>
+    <h2 id="contributions">Contributions</h2>
+    <h2 id="pinned">Pinned</h2>
     <div class="portfolio-content">
       <div class="row1">
         <div class="row1-wrapper">
@@ -195,11 +196,10 @@
         </div>
         <div id="contributions-heatmap"></div>
       </div>
-      <div class="row2"></div>
+      <div id="repo-container" class="row2"></div>
       <div class="row3"></div>
     </div>
   </section>
-  <div id="repo-container"></div>
 
   <script src="./contents/static/index.js"></script>
 </body>
