pie chart now fully fixed and working

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -4,30 +4,21 @@
 
 <head>
   <link rel="stylesheet" href="./contents/style/index.css" />
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/cal-heatmap/dist/cal-heatmap.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/cal-heatmap/dist/cal-heatmap.css" />
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://unpkg.com/cal-heatmap/dist/cal-heatmap.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/cal-heatmap/dist/plugins/Tooltip.min.js"></script>
   <script src="https://unpkg.com/cal-heatmap/dist/plugins/CalendarLabel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script
-    src="https://kit.fontawesome.com/13e3511e22.js"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="img-border"></div>
   <div class="img-wrapper">
-    <img
-      alt="profile picture"
-      src="./contents/imgs/topbar-photo.jpeg"
-      class="profile-img"
-    />
+    <img alt="profile picture" src="./contents/imgs/topbar-photo.jpeg" class="profile-img" />
   </div>
   <div class="top-bar">
     <ul>
@@ -51,24 +42,16 @@
   <div class="social-bar">
     <ul>
       <li>
-        <a href="https://github.com/OguzGurv2"
-          ><i class="fa-brands fa-github"></i
-        ></a>
+        <a href="https://github.com/OguzGurv2"><i class="fa-brands fa-github"></i></a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/oguz-gur/"
-          ><i class="fa-brands fa-linkedin"></i
-        ></a>
+        <a href="https://www.linkedin.com/in/oguz-gur/"><i class="fa-brands fa-linkedin"></i></a>
       </li>
       <li>
-        <a href="mailto:oguz.gur.cs@gmail.com"
-          ><i class="fa-solid fa-envelope"></i
-        ></a>
+        <a href="mailto:oguz.gur.cs@gmail.com"><i class="fa-solid fa-envelope"></i></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/ouzdotexe/"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
+        <a href="https://www.instagram.com/ouzdotexe/"><i class="fa-brands fa-instagram"></i></a>
       </li>
       <li>
         <div></div>
@@ -148,33 +131,25 @@
     <ul class="link-list">
       <li>
         <div>
-          <a href="https://github.com/OguzGurv2"
-            ><i class="fa-brands fa-github"></i
-          ></a>
+          <a href="https://github.com/OguzGurv2"><i class="fa-brands fa-github"></i></a>
         </div>
         <p>Github</p>
       </li>
       <li>
         <div>
-          <a href="https://www.linkedin.com/in/oguz-gur/"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
+          <a href="https://www.linkedin.com/in/oguz-gur/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <p>Linkedin</p>
       </li>
       <li>
         <div>
-          <a href="mailto:oguz.gur.cs@gmail.com"
-            ><i class="fa-solid fa-envelope"></i
-          ></a>
+          <a href="mailto:oguz.gur.cs@gmail.com"><i class="fa-solid fa-envelope"></i></a>
         </div>
         <p>Gmail</p>
       </li>
       <li>
         <div>
-          <a href="https://www.instagram.com/ouzdotexe/"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
+          <a href="https://www.instagram.com/ouzdotexe/"><i class="fa-brands fa-instagram"></i></a>
         </div>
         <p>Instagram</p>
       </li>
@@ -205,11 +180,7 @@
           <div id="language-container"></div>
           <div id="language-diagram">
             <canvas id="myChart"></canvas>
-            <img
-              alt="profile picture"
-              src="./contents/imgs/topbar-photo.jpeg"
-              class="profile-img"
-            />
+            <img alt="profile picture" src="./contents/imgs/topbar-photo.jpeg" class="profile-img" />
           </div>
         </div>
       </div>
