--- a/webpages/index.html
+++ b/webpages/index.html
@@ -189,7 +189,7 @@
   <section id="contact">
     <h1>Contact Me</h1>
     <div class="contact-content">
-      <form id="contact-form" action="send_email.php" method="POST">
+      <form id="contact-form" action="./send_email.php" method="POST">
         <div class="form-row">
           <div>
             <label for="name">Name</label>
