--- a/webpages/index.html
+++ b/webpages/index.html
@@ -3,8 +3,9 @@
 <title>Home</title>
 
 <head>
-  <link rel="stylesheet" href="./contents/style/index.css" />
+  <link rel="stylesheet" href="./contents/style/index.css?v=1" />
   <link rel="stylesheet" href="https://unpkg.com/cal-heatmap/dist/cal-heatmap.css" />
+  <link rel="icon" href="contents/imgs/icon.png" type="image/png">
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://unpkg.com/cal-heatmap/dist/cal-heatmap.min.js"></script>
   <script src="https://unpkg.com/@popperjs/core@2"></script>
