visual update + message v1.0.2

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -214,8 +214,12 @@
             <input type="text" name="question" id="question" placeholder="Question" required>
           </div>
         </div>
-        <button type="submit">Submit</button>
+        <button id="submit" type="submit">Submit</button>
       </form>
+    </div>
+    <div id="message">
+      <i class="fa-solid fa-circle-info"></i>
+      <p>Message sent successfully!</p>
     </div>
     <div id="footer">
       <p>All rights reserved Oguz Gur (c) 2024</p>
