form bugs fixed v1.0.3

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -214,7 +214,7 @@
             <input type="text" name="question" id="question" placeholder="Question" required>
           </div>
         </div>
-        <button id="submit" type="submit">Submit</button>
+        <button id="submit" type="submit" disabled>Submit</button>
       </form>
     </div>
     <div id="message">
