css update for tablets v1.0.4

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -21,24 +21,26 @@
   <div class="img-wrapper">
     <img alt="profile picture" src="./contents/imgs/topbar-photo.jpeg" class="profile-img" />
   </div>
-  <div class="top-bar">
-    <ul>
-      <li>
-        <a href="#">HOME</a>
-      </li>
-      <li>
-        <a href="#skills">WHAT I CAN</a>
-      </li>
-      <li>
-        <a href="#links">LINKS</a>
-      </li>
-      <li>
-        <a href="#portfolio">PORTFOLIO</a>
-      </li>
-      <li>
-        <a href="#contact">CONTACT ME</a>
-      </li>
-    </ul>
+  <div class="top-bar-background">
+    <div class="top-bar">
+      <ul>
+        <li>
+          <a href="#">HOME</a>
+        </li>
+        <li>
+          <a href="#skills">WHAT I CAN</a>
+        </li>
+        <li>
+          <a href="#links">LINKS</a>
+        </li>
+        <li>
+          <a href="#portfolio">PORTFOLIO</a>
+        </li>
+        <li>
+          <a href="#contact">CONTACT ME</a>
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="social-bar">
     <ul>
@@ -55,30 +57,31 @@
         <a href="https://www.instagram.com/ouzdotexe/"><i class="fa-brands fa-instagram"></i></a>
       </li>
       <li>
+        <a href="https://docs.google.com/document/d/14DIQUPwxZ9aP0jZOoAEisb6cVKFJCvowQUUZ_NFrfx4/edit?usp=sharing"><i class="fa-brands fa-google-drive"></i></a>
+      </li>
+      <li>
         <div></div>
       </li>
     </ul>
   </div>
   <section class="hero-section">
-    <div class="hero-wrapper">
-      <div class="hero-content">
-        <div class="spans">
-          <span>O</span>
-          <span>G</span>
-          <span>U</span>
-          <span>Z</span>
-          <br />
-          <span>G</span>
-          <span>U</span>
-          <span>R</span>
-        </div>
-        <p>SECOND YEAR SOFTWARE ENGINEERING STUDENT</p>
+    <div class="hero-content">
+      <div class="spans">
+        <span>O</span>
+        <span>G</span>
+        <span>U</span>
+        <span>Z</span>
+        <br />
+        <span>G</span>
+        <span>U</span>
+        <span>R</span>
       </div>
-      <div class="hero-img">
-        <div class="img-clip"></div>
-        <img src="./contents/imgs/AdobeStock_253417100.jpeg" />
-        <div class="dark-overlay"></div>
-      </div>
+      <p>SECOND YEAR SOFTWARE ENGINEERING STUDENT</p>
+    </div>
+    <div class="hero-img">
+      <div class="img-clip"></div>
+      <img src="./contents/imgs/AdobeStock_253417100.jpeg" />
+      <div class="dark-overlay"></div>
     </div>
   </section>
   <section id="skills">
@@ -134,25 +137,26 @@
         <div>
           <a href="https://github.com/OguzGurv2"><i class="fa-brands fa-github"></i></a>
         </div>
-        <p>Github</p>
       </li>
       <li>
         <div>
           <a href="https://www.linkedin.com/in/oguz-gur/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
-        <p>Linkedin</p>
       </li>
       <li>
         <div>
           <a href="mailto:oguz.gur.cs@gmail.com"><i class="fa-solid fa-envelope"></i></a>
         </div>
-        <p>Gmail</p>
       </li>
       <li>
         <div>
           <a href="https://www.instagram.com/ouzdotexe/"><i class="fa-brands fa-instagram"></i></a>
         </div>
-        <p>Instagram</p>
+      </li>
+      <li>
+        <div>
+          <a href="https://docs.google.com/document/d/14DIQUPwxZ9aP0jZOoAEisb6cVKFJCvowQUUZ_NFrfx4/edit?usp=sharing"><i class="fa-brands fa-google-drive"></i></a>
+        </div>
       </li>
     </ul>
     <div class="circle-background-4"></div>
