fully mobile compatible v1.0.5

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -3,7 +3,7 @@
 <title>Home</title>
 
 <head>
-  <link rel="stylesheet" href="./contents/style/index.css?v=1" />
+  <link rel="stylesheet" href="./contents/style/index.css?v=2" />
   <link rel="stylesheet" href="https://unpkg.com/cal-heatmap/dist/cal-heatmap.css" />
   <link rel="icon" href="contents/imgs/icon.png" type="image/png">
   <script src="https://d3js.org/d3.v7.min.js"></script>
@@ -14,6 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://kit.fontawesome.com/13e3511e22.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
