--- a/webpages/index.html
+++ b/webpages/index.html
@@ -41,6 +41,9 @@
           <a href="#contact">CONTACT ME</a>
         </li>
       </ul>
+      <div id="dropdown-menu">
+        <i class="fa-solid fa-bars"></i>
+      </div>
     </div>
   </div>
   <div class="social-bar">
@@ -62,6 +65,28 @@
       </li>
       <li>
         <div></div>
+      </li>
+    </ul>
+  </div>
+  <div id="dropdown-content">
+    <ul>
+      <li>
+        <i id= close class="fa-solid fa-xmark"></i>
+      </li>
+      <li>
+        <a href="#">HOME</a>
+      </li>
+      <li>
+        <a href="#skills">WHAT I CAN</a>
+      </li>
+      <li>
+        <a href="#links">LINKS</a>
+      </li>
+      <li>
+        <a href="#portfolio">PORTFOLIO</a>
+      </li>
+      <li>
+        <a href="#contact">CONTACT ME</a>
       </li>
     </ul>
   </div>
