--- a/webpages/index.html
+++ b/webpages/index.html
@@ -190,12 +190,10 @@
   </div>
   <section id="portfolio">
     <h1>Portfolio</h1>
-    <h2 id="contributions">Contributions</h2>
-    <h2 id="pinned">Pinned</h2>
-    <h2 id="language">Languages</h2>
-
+    
     <div class="portfolio-content">
       <div class="row1">
+        <h2 id="contributions">Contributions</h2>
         <div class="row1-wrapper">
           <p>This is my portfolio that I gathered over the years.</p>
           <a href="https://github.com/OguzGurv2">
@@ -205,8 +203,12 @@
         </div>
         <div id="contributions-heatmap"></div>
       </div>
-      <div id="repo-container" class="row2"></div>
+      <div id="repo-container" class="row2">
+        <h2 id="pinned">Pinned</h2>
+        <div id="row2-wrapper"></div>    
+      </div>
       <div class="row3">
+        <h2 id="language">Languages</h2>
         <div class="row3-wrapper">
           <div id="language-container"></div>
           <div id="language-diagram">
