calheatmap + visual update v1.1.1

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -18,9 +18,11 @@
 </head>
 
 <body>
-  <div class="img-border"></div>
-  <div class="img-wrapper">
-    <img alt="profile picture" src="./contents/imgs/topbar-photo.jpeg" class="profile-img" />
+  <div class="img-bar">
+    <div class="img-border"></div>
+    <div class="img-wrapper">
+      <img alt="profile picture" src="./contents/imgs/topbar-photo.jpeg" class="profile-img" />
+    </div>
   </div>
   <div class="top-bar-background">
     <div class="top-bar">
